feat: 사용자 권한 정의 및 수정 API 구현