@@ -1,9 +1,10 @@
 package com.sprint.mission.discodeit.security;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.sprint.mission.discodeit.dto.response.UserDto;
@@ -20,7 +21,7 @@ public class DiscodeitUserDetails implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return Collections.emptyList();
+		return List.of(new SimpleGrantedAuthority("ROLE_" + userDto.role().name()));
 	}
 
 	@Override
